<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alivc MediaPlayer</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="replay_button">Replay</string>
    <string name="mute_label">Mute:</string>
    <string name="on_radiobutton">On</string>
    <string name="off_radiobutton">Off</string>
    <string name="volume_label">Volume</string>
    <string name="brightness_label">Brightness</string>
    <string name="scale_model">Scale model</string>
    <string name="aspect_fit">Aspect fit</string>
    <string name="aspect_fill">Aspect fill</string>
    <string name="drop_buffer_duration">Drop buffer duration</string>
    <string name="time_unit_label">ms</string>
    <string name="goto_play">Open interface of player</string>
    <string name="input_url">input url here</string>
    <string name="vod_basic_function">Basic function demo of Vod</string>
    <string name="live_basic_function">Basic functon demo of live</string>
    <string name="multiple_video_list_auto_play">Autoplay demo of multi-video</string>
    <string name="debug_tools">Debug tools demo</string>
    <string name="url_is_empty">The url is empty</string>
    <string name="player_log">Player Logs：</string>
    <string name="video_width">Video width：</string>
    <string name="video_height">Video height：</string>
    <string name="toast_prepare_success">Prepared successfully</string>
    <string name="toast_fail_msg">Fail!! Reason:</string>
    <string name="log_start_get_data">start to get a streaming</string>
    <string name="log_strart_play">start to play</string>
    <string name="log_prepare_success"> prepared successfully</string>
    <string name="log_player_create_success"> create a player successfully</string>
    <string name="log_open_url_success"> open an url successfully</string>
    <string name="log_request_stream_success"> get a streaming successfully</string>
    <string name="log_start_open_stream"> start to open a streaming</string>
    <string name="log_first_frame_played"> the first frame showed</string>
    <string name="log_seek_completed">seek operation completed</string>
    <string name="log_play_stopped">play operation stopped</string>
    <string name="log_seek_start">seek operation started</string>
    <string name="net_change_to_4g">Network switched to cell-network</string>
    <string name="net_change_to_wifi">Network switched to WIFI</string>
    <string name="net_disconnect">Network disconnected</string>
    <string name="net_change_to_continue">Continue to play？</string>
    <string name="copyright_title">Copyright Info</string>
    <string name="copyright_ali">Aliyun copyright©2017, Alibaba-inc</string>
    <string name="fd_definition">FD</string>
    <string name="ld_definition">LD</string>
    <string name="sd_definition">SD</string>
    <string name="hd_definition">HD</string>
    <string name="k2_definition">2K</string>
    <string name="k4_definition">4K</string>
    <string name="od_definition">OD</string>
    <string name="no_download_right">No permission for downloading</string>
    <string name="encrypted">Encrypted</string>
    <string name="encrypted_no">Unencrypted</string>
    <string name="choose_a_definition_to_download">Please choose a definition to download</string>
    <string name="info_is_empty">Incomplete information</string>
    <string name="request_vidsts_fail">Request a vidsts failed</string>
    <string name="request_authinfo_fail">Request an authinfo failed</string>
    <string name="please_fill_atleast_one_info">Please fill in at least one information about source-url or vid</string>
    <string name="ok">OK</string>
    <string name="log_change_quality">To request video quality switched to：</string>
    <string name="toast_no_local_storage_permission">No local storage permission</string>
    <string name="log_change_quality_success">Video quality switched successfully</string>
    <string name="log_change_quality_fail">Video quality switched unsuccessfully</string>
    <string name="log_play_completion">video ended</string>
    <string name="toast_play_compleion">video ended</string>
    <string name="require_permision_msg">The permission of sd-card is required</string>
    <string name="input_vid_here">Please input vid here</string>
    <string name="input_authinfo_here">Please input AuthInfo here</string>
    <string name="fix_port">Fixed portrail</string>
    <string name="add_download">To add</string>
    <string name="download_tip">Please set downloaded path and password in \'Application\', if password changed, the downloaded video cannot play</string>
    <string name="local_source_tip">Local address, example:/mnt/sdcard/test.pm4  URL address, example:http://XXX.xx.com/test.mp4</string>
    <string name="input_local_or_net_source">Please input url</string>
    <string name="play_with_no_skin">No UI player</string>
    <string name="play_with_skin">Full UI player</string>
    <string name="vod_player_basic_function">Basic function demo of Vod by using vid and palyAuth</string>
    <string name="full_screen_slide_play">Full screen slide play demo by using url</string>
    <string name="breakpoints_download">Breakpoints download demo</string>
    <string name="auto_play">Auto-play:</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="change_quality_label">Video quality switched to：</string>
    <string name="diagnosis_tip">Please input source-url or vid to diagnose</string>
    <string name="input_net_source_here">please input url here</string>
    <string name="goto_diagnosis">Start to diagnose</string>
    <string name="remove_button">Remove</string>
    <string name="play_button">Play</string>
    <string name="prepare_download_item">To prepare download-item</string>
    <string name="add_to_download">To add</string>
    <string name="half_times">0.5X</string>
    <string name="one_times">1.0X</string>
    <string name="one_and_a_half_times">1.5X</string>
    <string name="twice_times">2.0X</string>
    <string name="speed_mode">Variable speed model</string>
    <string name="play_localsource">play demo by LocalSource</string>
    <string name="vidsource">play demo by VidSource</string>
    <string name="alivc_theme_blue">Blue Theme</string>
    <string name="alivc_theme_green">Green Theme</string>
    <string name="alivc_theme_orange">Orange Theme</string>
    <string name="alivc_theme_red">Red Theme</string>
    <string name="title_activity_demo_base_player">DemoBasePlayerActivity</string>
    <string name="title_activity_demo_advance_player">DemoAdvancePlayerActivity</string>
    <string name="vid_sts">Basic function demo of Vod by using vid and sts</string>

    <string name="no">No</string>
    <string name="max_buffer_duration_nagtive">Drop buffer duration can not be a negative</string>
    <string name="basic_player">Basic player</string>
    <string name="advance_player">Advanced player</string>
    <string name="full_ui_player_demo">UI player</string>
    <string name="inout_accesskeyid_here">input accesskeyId here </string>
    <string name="input_accesskeysecret_here">input accesskeySecret here</string>
    <string name="input_securitytoken_here">input securityToken here </string>
    <string name="snapshot">SnapShot</string>
    <string name="snapshot_success">snapshot success </string>
    <string name="snapshot_fail">snapshot fail</string>
    <string name="change_source">change source</string>
    <string name="basic_input_url">Input url</string>
    <string name="continue_to_download">Continue to download?</string>
    <string name="download_has_compeleted">Item has download completed!</string>
    <string name="show_log">show log</string>

    <string name="alivc_alivc_replay_msg">Video ended</string>
    <string name="alivc_brightness">brightness</string>
    <string name="alivc_center">center</string>
    <string name="alivc_control"> control</string>
    <string name="alivc_error_code">Error code:</string>
    <string name="alivc_error_msg">Error message</string>
    <string name="alivc_fd_definition">FD</string>
    <string name="alivc_hd_definition">HD</string>
    <string name="alivc_k2_definition">2K</string>
    <string name="alivc_k4_definition">4K</string>
    <string name="alivc_ld_definition">LD</string>
    <string name="alivc_left_side">left side</string>
    <string name="alivc_loading">Loading...</string>
    <string name="alivc_loading_tips">Video is loading...</string>
    <string name="alivc_net_disable">The network is unreachable, please check network and replay latter</string>
    <string name="alivc_net_state_mobile">The current network is cell-network, whether to continue?</string>
    <string name="alivc_net_state_mobile_no">Exit</string>
    <string name="alivc_net_state_mobile_yes">Resume</string>
    <string name="alivc_od_definition">OD</string>
    <string name="alivc_progress">progress</string>
    <string name="alivc_replay">Replay</string>
    <string name="alivc_retry">Retry</string>
    <string name="alivc_right_side">right side</string>
    <string name="alivc_sd_definition">SD</string>
    <string name="alivc_speed_mode">Fast Speed Play</string>
    <string name="alivc_speed_one_times">Normal</string>
    <string name="alivc_speed_opt_times">1.5X</string>
    <string name="alivc_speed_optf_times">1.25X</string>
    <string name="alivc_speed_tips">the current video has switched to %1$s speed rate</string>
    <string name="alivc_speed_twice_times">2.0X</string>
    <string name="alivc_volume">volume</string>
</resources>
