<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentPosition"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/totalDuration"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/play"
                style="@style/btn_bordless_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_button" />

            <Button
                android:id="@+id/stop"
                style="@style/btn_bordless_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_button" />

            <Button
                android:id="@+id/pause"
                style="@style/btn_bordless_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pause_button" />

            <Button
                android:id="@+id/replay"
                style="@style/btn_bordless_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/replay_button" />

        </LinearLayout>


        <Button
            android:id="@+id/snapshot"
            style="@style/btn_bordless_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snapshot" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/auto_play_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/auto_play" />

                <CheckBox
                    android:id="@+id/autoPlayON"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/switch_bkg"
                    android:button="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute_label" />

            <CheckBox
                android:id="@+id/muteOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/switch_bkg"
                android:button="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_style"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/volume_label" />

            <SeekBar
                android:id="@+id/volumeProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_style"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/brightness_label" />

            <SeekBar
                android:id="@+id/brightnessProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100" />
        </LinearLayout>

        <TextView
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/scale_model" />


        <RadioGroup
            android:id="@+id/scalingMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fit"
                style="@style/radio_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/aspect_fit" />

            <RadioButton
                android:id="@+id/fill"
                style="@style/radio_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aspect_fill" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/change_quality_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/change_quality_label" />

            <LinearLayout
                android:id="@+id/quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/speed_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/alivc_speed_mode" />

            <RadioGroup
                android:id="@+id/speedgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/speed10"
                    style="@style/radio_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alivc_speed_one_times" />

                <RadioButton
                    android:id="@+id/speed125"
                    style="@style/radio_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alivc_speed_optf_times" />

                <RadioButton
                    android:id="@+id/speed15"
                    style="@style/radio_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alivc_speed_opt_times" />

                <RadioButton
                    android:id="@+id/speed20"
                    style="@style/radio_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alivc_speed_twice_times" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/width"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/height"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
